--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':deps:Simplistic-RSS')
     compile 'com.squareup.picasso:picasso:+'
+    compile 'joda-time:joda-time:2.3'
+
 
     compile 'com.android.support:support-v4:20.0.0'
     //lpreviewCompile 'com.android.support:recyclerview-v7:+'
