--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,11 +41,12 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':deps:Simplistic-RSS')
+
+    //lpreviewCompile 'com.android.support:recyclerview-v7:+'
     compile 'com.squareup.picasso:picasso:2.3.3'
     compile 'joda-time:joda-time:2.3'
     compile 'org.jsoup:jsoup:1.7.3'
-
-
+    compile 'com.squareup.retrofit:retrofit:1.6.1'
     compile 'com.android.support:support-v4:20.0.0'
-    //lpreviewCompile 'com.android.support:recyclerview-v7:+'
+    compile 'com.google.android.gms:play-services:5.0.77'
 }
