--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,8 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.6.1'
     compile 'com.android.support:support-v4:20.0.0'
     compile 'com.google.android.gms:play-services:5.0.77'
+
+    // Don't work on L-preview yet
+    kitkatCompile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
+    kitkatCompile 'com.squareup.okhttp:okhttp:2.0.0'
 }
