sqlalchemy db basically done
Signed-off-by: Jonas Kalderstam <jonas@kalderstam.se>

--- a/server/flaskapp/requirements.txt
+++ b/server/flaskapp/requirements.txt
@@ -4,3 +4,6 @@ Flask-SQLAlchemy
 # Need newer version than available on pip
 #flask-restful
 git+https://github.com/twilio/flask-restful
+# Oauth handling
+git+git://github.com/lepture/flask-oauthlib.git
+
