--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,6 +80,7 @@
             android:name="com.nononsenseapps.feeder.db.RssContentProvider"
             android:authorities="com.nononsenseapps.feeder.provider"
             android:enabled="true"
+            android:label="@string/app_name"
             android:exported="false" >
         </provider>
 
