--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,9 +7,9 @@ android {
         applicationId "com.nononsenseapps.feeder"
         versionCode 1
         versionName "1.0"
-        compileSdkVersion 19
+        compileSdkVersion 21
         minSdkVersion 19
-        targetSdkVersion 19
+        targetSdkVersion 21
 
         // Reduce bloat by removing stuff we don't need
         // Only support english right now
@@ -19,11 +19,10 @@ android {
     }
 
     productFlavors {
-        kitkat {
+        fdroid {
         }
-        //lpreview {
-        //    compileSdkVersion 'android-L'
-        //}
+        play {
+        }
     }
 
     buildTypes {
@@ -42,19 +41,21 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':deps:Simplistic-RSS')
 
-    //lpreviewCompile 'com.android.support:recyclerview-v7:+'
+    compile 'com.android.support:recyclerview-v7:+'
     compile 'com.squareup.picasso:picasso:2.3.3'
     compile 'joda-time:joda-time:2.3'
     compile 'org.jsoup:jsoup:1.7.3'
     compile 'com.squareup.retrofit:retrofit:1.6.1'
-    compile 'com.android.support:support-v4:20.0.0'
-    compile 'com.google.android.gms:play-services:5.2.08'
+    compile 'com.android.support:support-v4:21.0.0'
 
     // For nice looking progress bars
     compile 'com.github.castorflex.smoothprogressbar:library:1.0.0'
     compile 'com.github.castorflex.smoothprogressbar:library-circular:1.0.1'
 
+    playCompile 'com.google.android.gms:play-services:6.1.11'
     // Don't work on L-preview yet
-    kitkatCompile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
-    kitkatCompile 'com.squareup.okhttp:okhttp:2.0.0'
+    fdroidCompile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
+    fdroidCompile 'com.squareup.okhttp:okhttp:2.0.0'
+    playCompile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
+    playCompile 'com.squareup.okhttp:okhttp:2.0.0'
 }
