Faster debug build times
Signed-off-by: Jonas Kalderstam <jonas@kalderstam.se>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,12 +18,20 @@ android {
         resConfigs "nodpi", "hdpi", "xhdpi", "xxhdpi", "xxxhdpi"
     }
 
-//    productFlavors {
-//        free {
-//        }
-//        play {
-//        }
-//    }
+    productFlavors {
+        // Define separate dev and prod product flavors.
+        dev {
+            // dev utilizes minSDKVersion = 21 to allow the Android gradle plugin
+            // to pre-dex each module and produce an APK that can be tested on
+            // Android Lollipop without time consuming dex merging processes.
+            minSdkVersion 21
+        }
+        prod {
+            // The actual minSdkVersion for the application.
+            minSdkVersion 19
+        }
+    }
+
 
     buildTypes {
         debug {
@@ -38,6 +46,9 @@ android {
 }
 
 dependencies {
+    // This is only used for faster build-times
+    compile 'com.android.support:multidex:1.0.0'
+
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     compile 'com.android.support:recyclerview-v7:+'
