--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     compile 'com.android.support:recyclerview-v7:+'
-    compile 'com.squareup.picasso:picasso:2.4+'
     compile 'joda-time:joda-time:2.3'
     compile 'org.jsoup:jsoup:1.7.3'
     compile 'com.squareup.retrofit:retrofit:1.6.1'
@@ -63,7 +62,6 @@ dependencies {
     compile 'com.github.castorflex.smoothprogressbar:library:1.0.0'
     compile 'com.github.castorflex.smoothprogressbar:library-circular:1.0.1'
 
-    // Don't work on L-preview yet
-    compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0+'
-    compile 'com.squareup.okhttp:okhttp:2.0.0+'
+    // Image loading
+    compile 'com.github.bumptech.glide:glide:3.5.2'
 }
