--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,12 +51,12 @@ dependencies {
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile 'com.android.support:recyclerview-v7:+'
+    compile 'com.android.support:recyclerview-v7:22.1.1'
     compile 'joda-time:joda-time:2.3'
     compile 'org.jsoup:jsoup:1.7.3'
     compile 'com.squareup.retrofit:retrofit:1.6.1'
-    compile 'com.android.support:support-v4:21.0.2'
-    compile "com.android.support:appcompat-v7:21.0.+"
+    compile 'com.android.support:support-v4:22.1.1'
+    compile "com.android.support:appcompat-v7:22.1.1"
 
     // For nice looking progress bars
     compile 'com.github.castorflex.smoothprogressbar:library:1.0.0'
