--- a/server/flaskapp/config-sample.yaml
+++ b/server/flaskapp/config-sample.yaml
@@ -6,8 +6,8 @@ host: 127.0.0.1
 # Port to use
 port: 5000
 
-# Location of database file (relative or absolute)
-FEEDER_DATABASE: ./feeder.db
+# URL to Neo database. Include username and password if required
+FEEDER_NEO_URL: http://neo4j:neo4j@localhost:7474/db/data
 # Allow login with Google account. If false, only username password can be used.
 FEEDER_ALLOW_GOOGLE: true
 # If anyone with a Google account is allowed access. If false, then the email
