--- a/.drone.yml
+++ b/.drone.yml
@@ -1,6 +1,6 @@
 pipeline:
   build-server:
-    image: python:3.5.1-alpine
+    image: python:3.5
     commands:
       - pip install --upgrade pip
       - pip install --upgrade -r server/flaskapp/requirements.txt
