--- a/server/flaskapp/requirements.txt
+++ b/server/flaskapp/requirements.txt
@@ -5,5 +5,4 @@ httplib2
 
 # Need newer version than available on pip
 #flask-restful
-git+https://github.com/twilio/flask-restful
-
+git+https://github.com/twilio/flask-restful@0.3.5
