--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -3,6 +3,7 @@ flask
 Flask-SQLAlchemy
 httplib2
 
+flask-restful>=0.3.5
 # Need newer version than available on pip
 #flask-restful
-git+https://github.com/twilio/flask-restful@0.3.5
+#git+https://github.com/twilio/flask-restful@0.3.5
