--- a/server/debian/control
+++ b/server/debian/control
@@ -2,7 +2,7 @@ Source: feeder
 Section: web
 Priority: optional
 Maintainer: Jonas Kalderstam <jonas@cowboyprogrammer.org>
-Build-Depends: debhelper (>= 9)
+Build-Depends: debhelper (>= 9), dh-python, python3
 Standards-Version: 3.9.8
 Homepage: https://github.com/spacecowboy/feeder
 Vcs-Git: https://github.com/spacecowboy/feeder.git
@@ -10,6 +10,6 @@ Vcs-Browser: https://github.com/spacecowboy/feeder
 
 Package: feeder
 Architecture: all
-Depends: python3 (>= 3.3), python3-flask, python3-flask-sqlalchemy, python3-httplib2, python3-flask-restful (>= 0.3.5), python3-yaml, python3-feedparser (>= 5.1.3)
+Depends: ${python3:Depends}
 Description: An RSS/Atom caching server
  feeder is an RSS/Atom caching server.
