--- a/server/debian/rules
+++ b/server/debian/rules
@@ -13,10 +13,20 @@ export DH_VERBOSE = 1
 # package maintainers to append LDFLAGS
 #export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 
-
 %:
-	dh $@
+	dh $@ --with python3
 
+override_dh_python3:
+	dh_python3 --requires=requirements.txt
+
+override_dh_auto_build:
+
+override_dh_auto_install:
+	/usr/bin/python3 setup.py install --force --no-compile --root=debian/feeder --install-layout=deb
+
+override_dh_auto_clean:
+	rm -rf build
+	dh_auto_clean
 
 # dh_make generated override targets
 # This is example for Cmake (See https://bugs.debian.org/641051 )
