--- a/server/config-sample.yaml
+++ b/server/config-sample.yaml
@@ -6,6 +6,9 @@ host: 127.0.0.1
 # Port to use
 port: 5000
 
+# Avoid an annoying warning
+SQLALCHEMY_TRACK_MODIFICATIONS: false
+
 # Location of database file (relative or absolute)
 FEEDER_DATABASE: ./feeder.db
 # Allow login with Google account. If false, only username password can be used.
